--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       margin-bottom: 25px;
     }
     .back-to-subjects {
-  background-color: #00796b; /* أخضر داكن متناسق مع اللون الأساسي */
+  background-color: #009688; /* أخضر داكن متناسق مع اللون الأساسي */
   color: #ffffff;
   transition: background-color 0.3s ease;
 }
@@ -64,7 +64,7 @@
 }
 
 .back-to-main {
-  background-color: #00796b; /* لون أزرق مخضر مختلف لكنه متناسق */
+  background-color: #009688; /* لون أزرق مخضر مختلف لكنه متناسق */
   color: #ffffff;
   transition: background-color 0.3s ease;
 }
