--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       margin-bottom: 25px;
     }
     .back-to-subjects {
-  background-color: #009688; /* أخضر داكن متناسق مع اللون الأساسي */
+  background-color: #00a693; /* أخضر داكن متناسق مع اللون الأساسي */
   color: #ffffff;
   transition: background-color 0.3s ease;
 }
 .back-to-subjects:hover {
-  background-color: #009688;
+  background-color: #00a693;
 }
 
 .back-to-main {
