--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
   transition: background-color 0.3s ease;
 }
 .back-to-subjects:hover {
-  background-color: #00a693;
+  background-color: #009688;
 }
 
 .back-to-main {
-  background-color: #009688; /* لون أزرق مخضر مختلف لكنه متناسق */
+  background-color: #00a693; /* لون أزرق مخضر مختلف لكنه متناسق */
   color: #ffffff;
   transition: background-color 0.3s ease;
 }
